@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,39 +20,37 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.strategy;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.AppenderBase;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.slf4j.LoggerFactory;
-
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.LinkedList;
 import java.util.List;
-
-import static org.junit.Assert.assertEquals;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.slf4j.LoggerFactory;
 
 /**
- * Date: 12/29/15 - 10:58 PM
+ * Date: 12/29/15 - 10:58 PM.
  *
  * @author Jeroen Meulemeester
  */
-@RunWith(Parameterized.class)
 public class DragonSlayingStrategyTest {
 
   /**
+   * Assembles test parameters.
+   *
    * @return The test parameters for each cycle
    */
-  @Parameterized.Parameters
-  public static Collection<Object[]> data() {
-    return Arrays.asList(
+  static Collection<Object[]> dataProvider() {
+    return List.of(
         new Object[]{
             new MeleeStrategy(),
             "With your Excalibur you sever the dragon's head!"
@@ -68,52 +66,32 @@ public class DragonSlayingStrategyTest {
     );
   }
 
-  /**
-   * The tested strategy
-   */
-  private final DragonSlayingStrategy strategy;
-
-  /**
-   * The expected action in the log
-   */
-  private final String expectedResult;
-
   private InMemoryAppender appender;
 
-  @Before
+  @BeforeEach
   public void setUp() {
     appender = new InMemoryAppender();
   }
 
-  @After
+  @AfterEach
   public void tearDown() {
     appender.stop();
   }
 
 
   /**
-   * Create a new test instance for the given strategy
-   *
-   * @param strategy       The tested strategy
-   * @param expectedResult The expected result
+   * Test if executing the strategy gives the correct response.
    */
-  public DragonSlayingStrategyTest(final DragonSlayingStrategy strategy, final String expectedResult) {
-    this.strategy = strategy;
-    this.expectedResult = expectedResult;
-  }
-
-  /**
-   * Test if executing the strategy gives the correct response
-   */
-  @Test
-  public void testExecute() {
-    this.strategy.execute();
-    assertEquals(this.expectedResult, appender.getLastMessage());
+  @ParameterizedTest
+  @MethodSource("dataProvider")
+  public void testExecute(DragonSlayingStrategy strategy, String expectedResult) {
+    strategy.execute();
+    assertEquals(expectedResult, appender.getLastMessage());
     assertEquals(1, appender.getLogSize());
   }
 
   private class InMemoryAppender extends AppenderBase<ILoggingEvent> {
-    private List<ILoggingEvent> log = new LinkedList<>();
+    private final List<ILoggingEvent> log = new LinkedList<>();
 
     public InMemoryAppender() {
       ((Logger) LoggerFactory.getLogger("root")).addAppender(this);
