@@ -1,7 +1,6 @@
 /*
- * The MIT License (MIT)
- *
- * Copyright (c) 2014-2017 Piyush Chaudhari
+ * The MIT License
+ * Copyright © 2014-2021 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -10,85 +9,76 @@
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
  *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
  *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
  */
 
 package com.iluwatar.unitofwork;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.*;
+import org.junit.jupiter.api.Test;
 
 /**
  * tests {@link StudentRepository}
  */
-@RunWith(MockitoJUnitRunner.class)
-public class StudentRepositoryTest {
+
+class StudentRepositoryTest {
   private final Student student1 = new Student(1, "Ram", "street 9, cupertino");
   private final Student student2 = new Student(1, "Sham", "Z bridge, pune");
 
-  private Map<String, List<Student>> context;
-  @Mock
-  private StudentDatabase studentDatabase;
-  private StudentRepository studentRepository;
-
-  @Before
-  public void setUp() throws Exception {
-    context = new HashMap<>();
-    studentRepository = new StudentRepository(context, studentDatabase);
-  }
+  private final Map<String, List<Student>> context = new HashMap<>();
+  private final StudentDatabase studentDatabase = mock(StudentDatabase.class);
+  private final StudentRepository studentRepository = new StudentRepository(context, studentDatabase);;
 
   @Test
-  public void shouldSaveNewStudentWithoutWritingToDb() throws Exception {
+  void shouldSaveNewStudentWithoutWritingToDb() {
     studentRepository.registerNew(student1);
     studentRepository.registerNew(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.INSERT).size());
+    assertEquals(2, context.get(UnitActions.INSERT.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
   @Test
-  public void shouldSaveDeletedStudentWithoutWritingToDb() throws Exception {
+  void shouldSaveDeletedStudentWithoutWritingToDb() {
     studentRepository.registerDeleted(student1);
     studentRepository.registerDeleted(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.DELETE).size());
+    assertEquals(2, context.get(UnitActions.DELETE.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
   @Test
-  public void shouldSaveModifiedStudentWithoutWritingToDb() throws Exception {
+  void shouldSaveModifiedStudentWithoutWritingToDb() {
     studentRepository.registerModified(student1);
     studentRepository.registerModified(student2);
 
-    assertEquals(2, context.get(IUnitOfWork.MODIFY).size());
+    assertEquals(2, context.get(UnitActions.MODIFY.getActionValue()).size());
     verifyNoMoreInteractions(studentDatabase);
   }
 
   @Test
-  public void shouldSaveAllLocalChangesToDb() throws Exception {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+  void shouldSaveAllLocalChangesToDb() {
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -98,8 +88,8 @@ public class StudentRepositoryTest {
   }
 
   @Test
-  public void shouldNotWriteToDbIfContextIsNull() throws Exception {
-    StudentRepository studentRepository = new StudentRepository(null, studentDatabase);
+  void shouldNotWriteToDbIfContextIsNull() {
+    var studentRepository = new StudentRepository(null, studentDatabase);
 
     studentRepository.commit();
 
@@ -107,18 +97,18 @@ public class StudentRepositoryTest {
   }
 
   @Test
-  public void shouldNotWriteToDbIfNothingToCommit() throws Exception {
-    StudentRepository studentRepository = new StudentRepository(new HashMap<>(), studentDatabase);
+  void shouldNotWriteToDbIfNothingToCommit() {
+    var studentRepository = new StudentRepository(new HashMap<>(), studentDatabase);
 
     studentRepository.commit();
 
-    verifyZeroInteractions(studentDatabase);
+    verifyNoMoreInteractions(studentDatabase);
   }
 
   @Test
-  public void shouldNotInsertToDbIfNoRegisteredStudentsToBeCommitted() throws Exception {
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+  void shouldNotInsertToDbIfNoRegisteredStudentsToBeCommitted() {
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -126,9 +116,9 @@ public class StudentRepositoryTest {
   }
 
   @Test
-  public void shouldNotModifyToDbIfNotRegisteredStudentsToBeCommitted() throws Exception {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.DELETE, Collections.singletonList(student1));
+  void shouldNotModifyToDbIfNotRegisteredStudentsToBeCommitted() {
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.DELETE.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
@@ -136,9 +126,9 @@ public class StudentRepositoryTest {
   }
 
   @Test
-  public void shouldNotDeleteFromDbIfNotRegisteredStudentsToBeCommitted() throws Exception {
-    context.put(IUnitOfWork.INSERT, Collections.singletonList(student1));
-    context.put(IUnitOfWork.MODIFY, Collections.singletonList(student1));
+  void shouldNotDeleteFromDbIfNotRegisteredStudentsToBeCommitted() {
+    context.put(UnitActions.INSERT.getActionValue(), List.of(student1));
+    context.put(UnitActions.MODIFY.getActionValue(), List.of(student1));
 
     studentRepository.commit();
 
